--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   color: white;
   background-color: blue;
   width: 200;
-  text-align: center;
-  
+  text-align: center; 
 }
+
+#textbox {
+  color: bla
