--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
   outline-width: thin;
   outline-offset: 10px;
   text-align: center;
-  width: 200;
-  margin-left: 150;
-  
+  width: 230;
+  margin-left: 160;
+  margin-top: 50;
 }
+
