--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   color: black;
   outline: solid;
   outline-width: thin;
-  outline-offset: 10px;
+  padding: 20px;
   text-align: center;
-  width: 230;
-  margin-left: 160;
+  width: 210;
+  margin-left: 140;
   margin-top: 50;
 }
 
